@@ -104,6 +104,7 @@ system2 <- function(command, args = character(),
     .Internal(system(command, intern))
 }
 
+## Some people try to use this with NA inputs (PR#15147)
 Sys.which <- function(names)
 {
     res <- character(length(names)); names(res) <- names
@@ -113,9 +114,10 @@ Sys.which <- function(names)
         warning("'which' was not found on this platform")
         return(res)
     }
-    for(i in names) {
+    for(i in seq_along(names)) {
+        if(is.na(names[i])) {res[i] <- NA; next}
         ## Quoting was added in 3.0.0
-        ans <- suppressWarnings(system(paste(which, shQuote(i)),
+        ans <- suppressWarnings(system(paste(which, shQuote(names[i])),
                                        intern = TRUE, ignore.stderr = TRUE))
         ## Solaris' which gives 'no foo in ...' message on stdout,
         ## GNU which does it on stderr
